Traffic-Management-Basics/ms-demo/08-http-retry/retry-vs-proxy.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: proxy-gateway
  namespace: istio-system        # 要指定为ingress gateway pod所在名称空间
spec:
  selector:
    app: istio-ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "fe.icloud2native.com"
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: proxy
spec:
  hosts:
  - "fe.icloud2native.com"                     # 对应于gateways/proxy-gateway
  gateways:
  - istio-system/proxy-gateway       # 相关定义仅应用于Ingress Gateway上
  - mesh                             # 应用在网格内所有的sidercar上
  http:
  - name: default
    route:
    - destination:
        host: proxy
    retries:
      attempts: 5
      perTryTimeout: 3s
      retryOn: 5xx,connect-failure,refused-stream
